fix possible title overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -302,6 +302,9 @@ ol {
   font-size: 30px;
   line-height: 100%;
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .content__video-card-description {
